chore(UbicacionTest): aumentar declaratividad